// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimateWrapper should render correctly by start animation with minimum props 1`] = `
<div
  animationStates={Object {}}
  delaySeconds={0}
  durationSeconds={0.3}
  easeType="linear"
  endStyle={
    Object {
      "display": "block",
    }
  }
  forwardedRef={null}
  play={true}
>
  test
</div>
`;

exports[`AnimateWrapper should render correctly with minimum props 1`] = `
<div
  animationStates={Object {}}
  delaySeconds={0}
  durationSeconds={0.3}
  easeType="linear"
  endStyle={
    Object {
      "display": "block",
    }
  }
  forwardedRef={null}
  play={false}
>
  test
</div>
`;

exports[`AnimateWrapper should render correctly with render props 1`] = `
<div
  animationStates={Object {}}
  delaySeconds={0}
  durationSeconds={0.3}
  easeType="linear"
  endStyle={
    Object {
      "display": "block",
    }
  }
  forwardedRef={null}
  play={false}
  render={[Function]}
>
  what
</div>
`;

exports[`AnimateWrapper should render custome tag correctly 1`] = `
<li
  animationStates={Object {}}
  delaySeconds={0}
  durationSeconds={0.3}
  easeType="linear"
  endStyle={
    Object {
      "display": "block",
    }
  }
  forwardedRef={null}
  play={false}
  tag="li"
/>
`;
